# cgtools

./: .gitignore  .travis.yml  CHANGELOG.md  Main.hs  README.md  cgtools.cabal
scaffold/: bash-completion  prepare-commit-msg
src/: CGTools.hs  Main.hs
src/CGTools/: CLI.hs  Install.hs  Log.hs  Types.hs  Utils.hs  Validate.hs
src/CGTools/Install/: Internal.hs
src/CGTools/Validate/: Internal.hs
test/: Test.hs
test/CGTools/Install/: Test.hs
test/CGTools/Validate/: Test.hs
