name:                cgtools
version:             0.1.0.0
synopsis:            Conventional Git Tools
description:         Conventional Git Tools
homepage:            https://github.com/shanewilson/cgtools
license:             Apache-2.0
license-file:        LICENSE
author:              Shane Wilson
maintainer:          shanezilla@gmail.com

-- A copyright notice.
-- copyright:           

category:            Development
build-type:          Simple
cabal-version:       >=1.10


--library
executable cgtools
  default-language:    Haskell2010
  hs-source-dirs:      src
--  exposed-modules:     CGTools
--                     , CGTools.CLI
  ghc-options:         -Wall
                       -fwarn-incomplete-patterns
  default-extensions:  OverloadedStrings
                       ExtendedDefaultRules
                       CPP

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <5
                     , optparse-applicative >=0.11
                     , text >= 1.2.0
                     , directory >= 1.2.1
                     , filepath >= 1.3.0
                     , regex-posix >= 0.93.1
                     , process >= 1.2.1
                     , transformers >= 0.4.2
                     , safe >= 0.3.8
                     , bytestring >= 0.10.4

  main-is:             Main.hs
--executable cgtools
--  default-language:    Haskell2010
--  main-is:             Main.hs
--  ghc-options:         -Wall
--  default-extensions:  OverloadedStrings
--  Build-Depends:       base
--                     , cgtools