name:                cgtools
version:             0.1.0.0
synopsis:            Conventional Git Tools
description:         Conventional Git Tools
homepage:            https://github.com/shanewilson/cgtools
license:             Apache-2.0
license-file:        LICENSE
author:              Shane Wilson
maintainer:          shanezilla@gmail.com

-- A copyright notice.
-- copyright:           

category:            Development
build-type:          Simple
cabal-version:       >=1.10

data-files: scaffold/prepare-commit-msg

source-repository head
    type:               git
    branch:             master
    location:           https://github.com/shanewilson/cgtools

--library
executable cgtools
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:          -Wall
                        -fwarn-incomplete-patterns
                        -fno-warn-unused-do-bind
                        -fno-warn-name-shadowing
  default-extensions:  OverloadedStrings
                       ExtendedDefaultRules
                       DeriveDataTypeable
                       CPP

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && < 5
                     , optparse-applicative
                     , text
                     , directory
                     , filepath
                     , regex-posix
                     , process
                     , transformers
                     , safe
                     , bytestring
                     , ansi-terminal
                     , hastache
                     , FindBin

  main-is:             Main.hs
  -- from Tasty cabal with ansi-terminal
  cpp-options: -DCOLORS

library
  exposed-modules:      CGTools
                      , CGTools.CLI
                      , CGTools.Install
                      , CGTools.Validate
                      , CGTools.Log
  -- other-modules:
  -- other-extensions:
  ghc-options:          -Wall
                        -fwarn-incomplete-patterns
                        -fno-warn-unused-do-bind
                        -fno-warn-name-shadowing
  default-extensions:  OverloadedStrings
                       ExtendedDefaultRules
                       DeriveDataTypeable
                       CPP

  build-depends:        base >= 4.6 && < 5
                       , optparse-applicative
                       , text
                       , directory
                       , filepath
                       , regex-posix
                       , process
                       , transformers
                       , safe
                       , bytestring
                       , ansi-terminal
                       , hastache
                       , FindBin

  -- from Tasty cabal with ansi-terminal
  cpp-options: -DCOLORS

  hs-source-dirs:       src
  default-language:     Haskell2010

executable test-cgtools
  hs-source-dirs:       test
  ghc-options:          -Wall
                        -fwarn-incomplete-patterns
                        -fno-warn-unused-do-bind
                        -fno-warn-name-shadowing
  default-extensions:   OverloadedStrings
                        ExtendedDefaultRules
                        DeriveDataTypeable
                        CPP
  main-is:              Test.hs
  other-modules:        CGTools.Validate.Test
  default-language:     Haskell2010
  build-depends:        base >=4.6 && < 5
                      , cgtools
                      , HUnit
                      , QuickCheck
                      , smallcheck
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , tasty-smallcheck

test-suite test
  hs-source-dirs:       test
  ghc-options:          -Wall
                        -fwarn-incomplete-patterns
                        -fno-warn-unused-do-bind
                        -fno-warn-name-shadowing
  default-extensions:  OverloadedStrings
                       ExtendedDefaultRules
                       DeriveDataTypeable
                       CPP

  main-is:              Test.hs
  Type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , cgtools
                      , HUnit
                      , QuickCheck
                      , smallcheck
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , tasty-smallcheck